Refactor: change imple